<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/action_add"
        android:title="@string/action_add"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_add"
        />

    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_edit"/>

    <item
        android:id="@+id/action_remove"
        android:title="@string/action_remove"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_delete"/>
</menu>